--- a/blogpost.html
+++ b/blogpost.html
@@ -19,7 +19,9 @@
                     Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.
                 </p>
                 <p>Suscríbete y dale like</p>
-
+		<div id="footer">
+			Hecho con amor en Platzi &lt;3
+		</div>
             </div>
         </div>
     </body>
